[gd_scene load_steps=8 format=3 uid="uid://cj87aexkj3nox"]

[ext_resource type="PackedScene" uid="uid://8eqx36gbs540" path="res://menu/rolling_door_bg.tscn" id="1_cw3on"]
[ext_resource type="Script" uid="uid://2agunwvr1ydx" path="res://game/game_over.gd" id="1_mxcey"]
[ext_resource type="FontFile" uid="uid://bet3oe08d83oe" path="res://assets/font/Kaph-Regular.ttf" id="2_mxcey"]
[ext_resource type="PackedScene" uid="uid://crsc23np72w83" path="res://ui/button_menu.tscn" id="3_4w48o"]

[sub_resource type="LabelSettings" id="LabelSettings_ahoid"]
font = ExtResource("2_mxcey")
font_size = 40
outline_size = 40
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ncdyg"]
font = ExtResource("2_mxcey")
font_size = 200
font_color = Color(1, 0.823529, 0.235294, 1)
outline_size = 40
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ny4d7"]
font = ExtResource("2_mxcey")
font_size = 100
outline_size = 40
outline_color = Color(0, 0, 0, 1)

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mxcey")

[node name="RollingDoorBG" parent="." instance=ExtResource("1_cw3on")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -83.5
offset_bottom = 83.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60

[node name="Score" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Score"]
layout_mode = 2
text = "customer service score"
label_settings = SubResource("LabelSettings_ahoid")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Point" type="Label" parent="VBoxContainer/Score"]
layout_mode = 2
text = "10000"
label_settings = SubResource("LabelSettings_ncdyg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScore" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HighScore"]
layout_mode = 2
text = "your high score"
label_settings = SubResource("LabelSettings_ahoid")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Point" type="Label" parent="VBoxContainer/HighScore"]
layout_mode = 2
text = "1000"
label_settings = SubResource("LabelSettings_ny4d7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonMenu" parent="VBoxContainer" instance=ExtResource("3_4w48o")]
layout_mode = 2
stretch_mode = 3
